--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
         <h1>Hundreds Chart</h1>
 
+        <div id="hchart-container"></div>
+
         <script src="js/main.js"></script>
     </body>
 </html>
